...
    <string name="preference_title_prefer_offline_content">Prefer offline content</string>
    <string name="preference_summary_prefer_offline_content">Save data usage by loading articles that are available offline rather than always loading the latest version of an article</string>

    <!-- Crash reporter -->
    <string name="crash_report_dialog_title">Sorry, app crashed last time</string>
    <string name="crash_report_dialog_text">Would you like to send a crash report to HockeyApp / a third-party service provider so that Wikimedia can review your crash and fix the bug that caused it?</string>
    <string name="crash_report_dialog_dont_send_button">Skip</string>
    <string name="crash_report_dialog_always_send_button">Always send</string>
    <string name="crash_report_dialog_send_button">Send</string>
    <string name="crash_report_activity_title">Application error</string>
    <string name="crash_report_relaunch_or_quit">We\'re sorry, the Wikipedia app has experienced an error and was terminated.\n\nWould you like to start over or quit?</string>
    <string name="crash_report_relaunch">Start over</string>
    <string name="crash_report_quit">Quit</string>
...

    <string name="incognito_display_text"> INCOGNITO ACTIVE </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="score">Score:</string>
    <string name="surrender">Surrender</string>
    <string name="game_instructions">Try to get to the destination article by navigating through Wikipedia via link click</string>
    <string name="game_start_title">Start The Game?</string>
    <string name="game_win_title">You won The Game!</string>
    <string name="game_start">Start</string>
    <string name="game_cancel">Cancel</string>
    <string name="camera_permission">Please enable camera permission in phone settings</string>
    <string name="speed_reader_start">- start -</string>
    <string name="artist_name">Artist Name</string>
    <string name="song_name">Song Name</string>
    <string name="album_name">Album Name</string>
...
