...
        android:id="@+id/activity_page_DF_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/base10">

        <fragment
            android:id="@+id/page_fragment"
            android:name="org.wikipedia.page.PageFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout="@layout/fragment_page"
            tools:layout="@layout/fragment_page" />

...
                app:navigationIcon="@drawable/ic_icon_w_back"
                app:titleTextColor="?attr/page_toolbar_icon_color">

                <LinearLayout
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/search_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true">

                    <android.support.v7.widget.AppCompatImageView
...
